--- a/src/style.css
+++ b/src/style.css
@@ -14,12 +14,24 @@ h1 {
   font-size: 4em;
 }
 
-.layout nav {
+.layout {
   display: grid;
   width: 100vw;
   height: 100vh;
   grid-template-columns: repeat(2, 1fr);
   text-align: center;
+
+  .nav-wrapper {
+    background-color: red;
+    height: 100%; 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  h1 {
+    margin-top: -2rem;
+  }
 }
 
 canvas {
